--- a/GNPMAzureFunctions/EmailTemplates/renewedAgreement.html
+++ b/GNPMAzureFunctions/EmailTemplates/renewedAgreement.html
@@ -29,7 +29,7 @@
                 <table width="100%" border="0" cellspacing="0" cellpadding="0">
                     <tr>
                         <td align="left" valign="middle" style="padding:10px; color:#564319; font-size:28px; font-family:Georgia, 'Times New Roman', Times, serif;">
-                            <small>A Net Price Agreement has expired.</small>
+                            <small>A Net Price Agreement is ready for the renewal.</small>
                         </td>
                     </tr>
                 </table>
