Code changes for changing email template

--- a/GNPMAzureFunctions/EmailTemplates/renewedAgreement.html
+++ b/GNPMAzureFunctions/EmailTemplates/renewedAgreement.html
@@ -29,7 +29,7 @@
                 <table width="100%" border="0" cellspacing="0" cellpadding="0">
                     <tr>
                         <td align="left" valign="middle" style="padding:10px; color:#564319; font-size:28px; font-family:Georgia, 'Times New Roman', Times, serif;">
-                            <small>A Net Price Agreement is ready for the renewal.</small>
+                            <small>A Net Price Agreement is ready for renewal.</small>
                         </td>
                     </tr>
                 </table>
@@ -49,7 +49,9 @@
                                 <br />
                                 <b>Status :</b> {4}
                                 <br />
-                                <b>Comment :</b> {5}
+                                <b>SalesPerson :</b> {5}
+                                <br />
+                                <b>Comment :</b> {6}
                             </div>
                         </td>
                     </tr>
@@ -66,7 +68,7 @@
                             <div>
                                 <b>
 
-                                    <a href="{6}" style="color:#525252; text-decoration: underline;">CLICK HERE</a> TO VIEW COMPLETE DETAILS.
+                                    <a href="{7}" style="color:#525252; text-decoration: underline;">CLICK HERE</a> TO VIEW COMPLETE DETAILS.
                                 </b>
                             </div>
                         </td>
